--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
     </properties>
 
     <dependencies>
+        <!-- 热部署模块 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
